--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,28 +1,29 @@
 {% extends "users/base.html" %}
 
 {% block head_content %}
-<title>Platzigram sig in</title>
-{% endblock %}
+<title>Platzigram sign in</title>
+{% endblock%}
 
 {% block container %}
 
-	{% if error  %}
-		<p class="alert alert-danger">{{ error }}</p>
-	{% endif %}
+    {% if error %}
+        <p class="alert alert-danger">{{ error }}</p>
+    {% endif%}
 
-	<form method="POST" action="{% url "login" %}">
-		{% csrf_token %}
+    <form method="POST" action="{% url "login" %}">
+        {% csrf_token %}
 
-		<div class="form-group">
-			<input class="form-control" type="text" placeholder="Username" name="username" />
-		</div>
+        <div class="form-group">
+            <input class="form-control" type="text" placeholder="Username" name="username" />
+        </div>
 
-		<div class="form-group">
-			<input class="form-control" type="password" placeholder="Password" name="password" />
-		</div>
+        <div class="form-group">
+            <input class="form-control" type="password" placeholder="Password" name="password" />
+        </div>
 
-		<button class="btn btn-primary btn-block mt-5" type="submit">Sig in!</button>
-		
-	</form>
+
+        <button class="btn btn-primary btn-block mt-5" type="submit">Sign in!</button>
+
+    </form>
 
 {% endblock %}
